zotero updated bib text representation in bib file

--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -1,6 +1,6 @@
 
 @article{Angles2008,
-  title = {Survey of graph database models},
+  title = {Survey of Graph Database Models},
   volume = {40},
   timestamp = {2016-08-19T11:48:51Z},
   number = {1},
@@ -13,7 +13,7 @@
 }
 
 @article{Chen1976,
-  title = {The {{Entity-Relationship Model\textendash{}Toward}} a {{Unified View}} of {{Data}}},
+  title = {The {{Entity}}-{{Relationship Model}}\textendash{}{{Toward}} a {{Unified View}} of {{Data}}},
   volume = {Vol. 1, No. 1},
   timestamp = {2016-08-19T11:48:52Z},
   journal = {ACM Transactions on Database Systems},
@@ -23,7 +23,7 @@
 }
 
 @incollection{DeVirgilio2014,
-  title = {Model-driven design of graph databases},
+  title = {Model-Driven Design of Graph Databases},
   timestamp = {2016-08-19T11:48:52Z},
   booktitle = {Conceptual {{Modeling}}},
   publisher = {{Springer}},
@@ -34,7 +34,7 @@
 }
 
 @inproceedings{Ebert1994,
-  title = {A declarative approach to graph based modeling},
+  title = {A Declarative Approach to Graph Based Modeling},
   timestamp = {2016-08-19T11:48:52Z},
   booktitle = {Graph-{{Theoretic Concepts}} in {{Computer Science}}},
   publisher = {{Springer}},
@@ -55,7 +55,7 @@
 }
 
 @article{Henkel2015,
-  title = {Combining computational models, semantic annotations and simulation experiments in a graph database},
+  title = {Combining Computational Models, Semantic Annotations and Simulation Experiments in a Graph Database},
   volume = {2015},
   timestamp = {2016-08-19T11:48:52Z},
   journal = {Database},
@@ -67,7 +67,7 @@
 }
 
 @article{Hucka2015,
-  title = {Promoting coordinated development of community-based information standards for modeling in biology: the {{COMBINE}} initiative},
+  title = {Promoting Coordinated Development of Community-Based Information Standards for Modeling in Biology: The {{COMBINE}} Initiative},
   volume = {3},
   timestamp = {2016-08-19T11:48:52Z},
   journal = {Frontiers in bioengineering and biotechnology},
@@ -78,7 +78,7 @@
 }
 
 @inproceedings{Kohn2008,
-  title = {{{SED-ML}}\textendash{}an {{XML}} format for the implementation of the {{MIASE}} guidelines},
+  title = {{{SED}}-{{ML}}\textendash{}an {{XML}} Format for the Implementation of the {{MIASE}} Guidelines},
   timestamp = {2016-08-19T11:48:52Z},
   booktitle = {Computational {{Methods}} in {{Systems Biology}}},
   publisher = {{Springer}},
@@ -90,18 +90,18 @@
 }
 
 @article{Scharm2015,
-  title = {An algorithm to detect and communicate the differences in computational models describing biological systems},
+  title = {An Algorithm to Detect and Communicate the Differences in Computational Models Describing Biological Systems},
   timestamp = {2016-08-19T11:48:52Z},
   journal = {Bioinformatics},
   author = {Scharm, Martin and Wolkenhauer, Olaf and Waltemath, Dagmar},
   year = {2015},
   pages = {btv484},
-  annote = {Extracted Annotations (8/19/2016, 3:23:40 PM)"steadily increasing number of computational models are available from open repositories" (Scharm et al 2015:1)"repositories provide the infrastructure necessary to maintain model code and associated metadata" (Scharm et al 2015:1)"distribution of models through these repositories accelerates collaborative research and encourages model reuse" (Scharm et al 2015:1)"Tracking the evolution of a model, that is providing information about changes in the model and its encoding, plays an important role in supporting the user" (Scharm et al 2015:1)"The need of model version control has been emphasized repeatedly on several occasions (Li et al., 2010; Miller et al., 2011; Saffrey and Orton, 2009; Waltemath et al., 2013a)" (Scharm et al 2015:1)"relation between versions of a model from different releases can be considered the history of the model's encoding" (Scharm et al 2015:2)"In the simplest case, the history follows a single line along the time axis. In practice, however, models are subject to modifications, including corrections, extension and other refinements" (Scharm et al 2015:2)"during model development, several alternatives are tested, leading to different paths in the history of a mode" (Scharm et al 2015:2)"especially when branches with different modifications shall be merged back into a single version of the model at a later time" (Scharm et al 2015:2)"For this reason, difference detection plays a key role in model version control" (Scharm et al 2015:2)"We refer to model provenance as the field of research that investigates the nature of differences in model versions, seeking answers to the seven W-questions: Who, What, Where, Why, When, Which, With (How)?" (Scharm et al 2015:2)"novel algorithm for difference detection in models of biological systems" (Scharm et al 2015:2)"pre-processes the model documents, maps the hierarchical model structures and post-processes the resulting mappings" (Scharm et al 2015:2)"mapping can then be exported in both machine and human readable formats" (Scharm et al 2015:2)"algorithm is implemented in a software library called BiVeS" (Scharm et al 2015:2)"It distinguishes six major steps:" (Scharm et al 2015:2)"Pre-processing the XML documents" (Scharm et al 2015:2)"Mapping the hierarchical structures" (Scharm et al 2015:2)"Post-processing the resulting mapping" (Scharm et al 2015:2)"Based on the identified mapping, the algorithm computes a delta" (Scharm et al 2015:2)"delta can be converted" (Scharm et al 2015:2)"two versions of an XML-encoded model are translated into an internal tree structure. For every node n in the tree, a hash sum n r and a weight n x are calculated" (Scharm et al 2015:2)"The weight of a node is thus always greater than the weight of its children. As such, the weight represents the size of the corresponding subtree" (Scharm et al 2015:2)"The hash sum of a node n represents the signature of the subtree rooted at n" (Scharm et al 2015:2)"While n r unambiguously defines the subtree rooted in n, n r does not need to be unique among all nodes in the tree. Thus, if n r \textonequarter{} m r then the subtrees in n and m are identically equal" (Scharm et al 2015:2)"First, nodes are being mapped with respect to their identifiers" (Scharm et al 2015:2)"id attributes in the XML documents serve as identifiers. In addition, we also evaluate biological identifiers, specifically links into bio-ontologies" (Scharm et al 2015:2)"Second, the initial mapping is propagated upwards into the trees." (Scharm et al 2015:3)"The connections of a node's children are evaluated in a depth-first traversal of T 2 . If a node n in T 2 is connected to a node m in T 1 then a mapping of parent\dh{}n\TH{} to parent\dh{}m\TH{} is suggested" (Scharm et al 2015:3)"If, in contrast, n is not connected, we examine the candidates that were previously suggested by the connections of n's children." (Scharm et al 2015:3)"andidates which have a different tag name than n and candidates which already have a connection are neglected." (Scharm et al 2015:3)"Among the remaining candidates, the algorithm chooses the one that received the best suggestions and connects it to n" (Scharm et al 2015:3)"Third, the algorithm makes use of the initially computed signatures and maps nodes of T 2 on nodes of T 1" (Scharm et al 2015:3)"A priority queueU is maintained to sort the nodes of T 2 based on their weights. Initially,U only consists of the root node of T 2 ." (Scharm et al 2015:3)"UnlessU is empty, the algorithm repeatedly removes node n2U T 2 with the biggest weight, which represents the biggest subtree in the queue" (Scharm et al 2015:3)"Fourth, the algorithm improves the quality of the mapping by examining the network structure of T 1 and T 2 in a top-down approach. For every mapping n2 T 2 on m2 T 1 , it compares unmatched children of n and m to find missed mappings" (Scharm et al 2015:3)"The algorithm evaluates the matrix greedily and adds new mappings up to a maximum distance of 0.9. Thus, nodes which have nothing in common will not be connected" (Scharm et al 2015:3)"Additional mapping rules capture the domain characteristics of the processed data. Following the current specifications for SBML and CellML, we prohibit certain changes in the hierarchical tree of document nodes. Specifically, we treat parts of the model as atomic constructs for which we define restrictions on possible network operations" (Scharm et al 2015:3)"This step is a major reason why our algorithm outperforms standard XML diff algorithms." (Scharm et al 2015:3)"insert if an entity is present in T 2 but absent in T" (Scharm et al 2015:3)"delete if an entity is present in T 1 but absent in T" (Scharm et al 2015:3)"move if a node is present in both documents, but either (i) the parents in the corresponding trees are not connected or (ii) the parents are connected, but the sequence of their siblings has changed" (Scharm et al 2015:3)"update if the value of an attribute, a text node's content or the tag name of a node was modified" (Scharm et al 2015:3)"After the mapping, we distinguish two types of nodes: mapped nodes and unmapped nodes. Unmapped nodes n2 T 1 [ T 2 are nodes for which the algorithm could not find a matching node in the opposite tree. These nodes and their attributes correspond to either inserts or deletes, depending on their origin" (Scharm et al 2015:3)"In contrast, mapped nodes are nodes for which the algorithm did find a matching node in the opposite tree. If the parents of such a mapping of n2 T 2 onto m2 T 1 are not connected, or if the sequence among their siblings has changed, then these nodes are included in the set of moves" (Scharm et al 2015:3)"Models are continuously modified. Consequently, new versions of a model are regularly being generated" (Scharm et al 2015:4)"We observe three major steps in model development that result in new versions" (Scharm et al 2015:4)"during the design phase" (Scharm et al 2015:4)"during curation and error correction" (Scharm et al 2015:4)"with updates of the format specification" (Scharm et al 2015:4)"BiVeS detects the differences between model versions" (Scharm et al 2015:4)"BiVeS communicates the differences" (Scharm et al 2015:4)"Reproducibility of model-based scientific results has gained increasing attention" (Scharm et al 2015:5)"Indeed, the ability to reproduce results is a basic requirement for the advance of science" (Scharm et al 2015:5)"comparability of models and their versions. Model provenance and version control enable the widespread use and application of models, saving time and efforts during development" (Scharm et al 2015:7) However, the reuse of models requires the accessibility and comparability of models and their versions. Model provenance andversion control enable the widespread use and application of mod-els, saving time and efforts during development (note on p.7)"Support for version control, however, is still limited." (Scharm et al 2015:7)"Such a combined system stores model versions and detects the differences between them. In addition, it offers support for understanding these changes and filtering them according to the users' preferences, as discussed in the following." (Scharm et al 2015:7)"Its major advantages over existing solutions for biological models are as follows: (i) it recognizes the models' hierarchical structures; (ii) it ignores white spaces, such as indentation, which generally do not affect the model's behaviour and (iii) it ignores the specific order of attributes in an entity. Additional post-processing rules capture the domain characteristics of the processed data and increase the significance of produced deltas. Currently, these rules are static" (Scharm et al 2015:7)"BiVeS helps grasping the changes" (Scharm et al 2015:7)"We are currently working on refining these filters using an ontology for differences. We envision that this ontology, together with tools for semi-automatic annotation, will help reduce the number of displayed changes to the ones that are meaningful or requested by the user" (Scharm et al 2015:7)"Current limitations with respect to output formats are missing support for the SBGN format and suitable graphical representations of models that do not specify a reaction network" (Scharm et al 2015:7)"Improving the reuse of computational models through version control" (Scharm et al 2015:8)},
+  annote = {Extracted Annotations (8/19/2016, 3:23:40 PM)"steadily increasing number of computational models are available from open repositories" (Scharm et al 2015:1)"repositories provide the infrastructure necessary to maintain model code and associated metadata" (Scharm et al 2015:1)"distribution of models through these repositories accelerates collaborative research and encourages model reuse" (Scharm et al 2015:1)"Tracking the evolution of a model, that is providing information about changes in the model and its encoding, plays an important role in supporting the user" (Scharm et al 2015:1)"The need of model version control has been emphasized repeatedly on several occasions (Li et al., 2010; Miller et al., 2011; Saffrey and Orton, 2009; Waltemath et al., 2013a)" (Scharm et al 2015:1)"relation between versions of a model from different releases can be considered the history of the model's encoding" (Scharm et al 2015:2)"In the simplest case, the history follows a single line along the time axis. In practice, however, models are subject to modifications, including corrections, extension and other refinements" (Scharm et al 2015:2)"during model development, several alternatives are tested, leading to different paths in the history of a mode" (Scharm et al 2015:2)"especially when branches with different modifications shall be merged back into a single version of the model at a later time" (Scharm et al 2015:2)"For this reason, difference detection plays a key role in model version control" (Scharm et al 2015:2)"We refer to model provenance as the field of research that investigates the nature of differences in model versions, seeking answers to the seven W-questions: Who, What, Where, Why, When, Which, With (How)?" (Scharm et al 2015:2)"novel algorithm for difference detection in models of biological systems" (Scharm et al 2015:2)"pre-processes the model documents, maps the hierarchical model structures and post-processes the resulting mappings" (Scharm et al 2015:2)"mapping can then be exported in both machine and human readable formats" (Scharm et al 2015:2)"algorithm is implemented in a software library called BiVeS" (Scharm et al 2015:2)"It distinguishes six major steps:" (Scharm et al 2015:2)"Pre-processing the XML documents" (Scharm et al 2015:2)"Mapping the hierarchical structures" (Scharm et al 2015:2)"Post-processing the resulting mapping" (Scharm et al 2015:2)"Based on the identified mapping, the algorithm computes a delta" (Scharm et al 2015:2)"delta can be converted" (Scharm et al 2015:2)"two versions of an XML-encoded model are translated into an internal tree structure. For every node n in the tree, a hash sum n r and a weight n x are calculated" (Scharm et al 2015:2)"The weight of a node is thus always greater than the weight of its children. As such, the weight represents the size of the corresponding subtree" (Scharm et al 2015:2)"The hash sum of a node n represents the signature of the subtree rooted at n" (Scharm et al 2015:2)"While n r unambiguously defines the subtree rooted in n, n r does not need to be unique among all nodes in the tree. Thus, if n r \textonequarter m r then the subtrees in n and m are identically equal" (Scharm et al 2015:2)"First, nodes are being mapped with respect to their identifiers" (Scharm et al 2015:2)"id attributes in the XML documents serve as identifiers. In addition, we also evaluate biological identifiers, specifically links into bio-ontologies" (Scharm et al 2015:2)"Second, the initial mapping is propagated upwards into the trees." (Scharm et al 2015:3)"The connections of a node's children are evaluated in a depth-first traversal of T 2 . If a node n in T 2 is connected to a node m in T 1 then a mapping of parent\dh{}n\TH to parent\dh{}m\TH is suggested" (Scharm et al 2015:3)"If, in contrast, n is not connected, we examine the candidates that were previously suggested by the connections of n's children." (Scharm et al 2015:3)"andidates which have a different tag name than n and candidates which already have a connection are neglected." (Scharm et al 2015:3)"Among the remaining candidates, the algorithm chooses the one that received the best suggestions and connects it to n" (Scharm et al 2015:3)"Third, the algorithm makes use of the initially computed signatures and maps nodes of T 2 on nodes of T 1" (Scharm et al 2015:3)"A priority queueU is maintained to sort the nodes of T 2 based on their weights. Initially,U only consists of the root node of T 2 ." (Scharm et al 2015:3)"UnlessU is empty, the algorithm repeatedly removes node n2U T 2 with the biggest weight, which represents the biggest subtree in the queue" (Scharm et al 2015:3)"Fourth, the algorithm improves the quality of the mapping by examining the network structure of T 1 and T 2 in a top-down approach. For every mapping n2 T 2 on m2 T 1 , it compares unmatched children of n and m to find missed mappings" (Scharm et al 2015:3)"The algorithm evaluates the matrix greedily and adds new mappings up to a maximum distance of 0.9. Thus, nodes which have nothing in common will not be connected" (Scharm et al 2015:3)"Additional mapping rules capture the domain characteristics of the processed data. Following the current specifications for SBML and CellML, we prohibit certain changes in the hierarchical tree of document nodes. Specifically, we treat parts of the model as atomic constructs for which we define restrictions on possible network operations" (Scharm et al 2015:3)"This step is a major reason why our algorithm outperforms standard XML diff algorithms." (Scharm et al 2015:3)"insert if an entity is present in T 2 but absent in T" (Scharm et al 2015:3)"delete if an entity is present in T 1 but absent in T" (Scharm et al 2015:3)"move if a node is present in both documents, but either (i) the parents in the corresponding trees are not connected or (ii) the parents are connected, but the sequence of their siblings has changed" (Scharm et al 2015:3)"update if the value of an attribute, a text node's content or the tag name of a node was modified" (Scharm et al 2015:3)"After the mapping, we distinguish two types of nodes: mapped nodes and unmapped nodes. Unmapped nodes n2 T 1 [ T 2 are nodes for which the algorithm could not find a matching node in the opposite tree. These nodes and their attributes correspond to either inserts or deletes, depending on their origin" (Scharm et al 2015:3)"In contrast, mapped nodes are nodes for which the algorithm did find a matching node in the opposite tree. If the parents of such a mapping of n2 T 2 onto m2 T 1 are not connected, or if the sequence among their siblings has changed, then these nodes are included in the set of moves" (Scharm et al 2015:3)"Models are continuously modified. Consequently, new versions of a model are regularly being generated" (Scharm et al 2015:4)"We observe three major steps in model development that result in new versions" (Scharm et al 2015:4)"during the design phase" (Scharm et al 2015:4)"during curation and error correction" (Scharm et al 2015:4)"with updates of the format specification" (Scharm et al 2015:4)"BiVeS detects the differences between model versions" (Scharm et al 2015:4)"BiVeS communicates the differences" (Scharm et al 2015:4)"Reproducibility of model-based scientific results has gained increasing attention" (Scharm et al 2015:5)"Indeed, the ability to reproduce results is a basic requirement for the advance of science" (Scharm et al 2015:5)"comparability of models and their versions. Model provenance and version control enable the widespread use and application of models, saving time and efforts during development" (Scharm et al 2015:7) However, the reuse of models requires the accessibility and comparability of models and their versions. Model provenance andversion control enable the widespread use and application of mod-els, saving time and efforts during development (note on p.7)"Support for version control, however, is still limited." (Scharm et al 2015:7)"Such a combined system stores model versions and detects the differences between them. In addition, it offers support for understanding these changes and filtering them according to the users' preferences, as discussed in the following." (Scharm et al 2015:7)"Its major advantages over existing solutions for biological models are as follows: (i) it recognizes the models' hierarchical structures; (ii) it ignores white spaces, such as indentation, which generally do not affect the model's behaviour and (iii) it ignores the specific order of attributes in an entity. Additional post-processing rules capture the domain characteristics of the processed data and increase the significance of produced deltas. Currently, these rules are static" (Scharm et al 2015:7)"BiVeS helps grasping the changes" (Scharm et al 2015:7)"We are currently working on refining these filters using an ontology for differences. We envision that this ontology, together with tools for semi-automatic annotation, will help reduce the number of displayed changes to the ones that are meaningful or requested by the user" (Scharm et al 2015:7)"Current limitations with respect to output formats are missing support for the SBGN format and suitable graphical representations of models that do not specify a reaction network" (Scharm et al 2015:7)"Improving the reuse of computational models through version control" (Scharm et al 2015:8)},
   file = {Attachment:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/ZXCMJSDU/Bioinformatics-2016-Scharm-563-70.pdf:application/pdf}
 }
 
 @article{McEntyre2015,
-  title = {The {{BioStudies}} database},
+  title = {The {{BioStudies}} Database},
   volume = {11},
   timestamp = {2016-08-19T11:48:52Z},
   number = {12},
@@ -112,7 +112,7 @@
 }
 
 @article{Olivier2004,
-  title = {Web-based kinetic modelling using {{JWS Online}}},
+  title = {Web-Based Kinetic Modelling Using {{JWS Online}}},
   volume = {20},
   timestamp = {2016-08-19T11:48:52Z},
   number = {13},
@@ -123,7 +123,7 @@
 }
 
 @article{Scharm2015a,
-  title = {Extracting reproducible simulation studies from model repositories using the {{CombineArchive Toolkit}}},
+  title = {Extracting Reproducible Simulation Studies from Model Repositories Using the {{CombineArchive Toolkit}}},
   volume = {3},
   timestamp = {2016-08-19T11:48:52Z},
   journal = {PeerJ PrePrints},
@@ -133,7 +133,7 @@
 }
 
 @article{Scharm2014,
-  title = {The {{CombineArchive Toolkit}}-facilitating the transfer of research results},
+  title = {The {{CombineArchive Toolkit}}-Facilitating the Transfer of Research Results},
   volume = {2},
   timestamp = {2016-08-19T11:48:52Z},
   journal = {PeerJ PrePrints},
@@ -143,7 +143,7 @@
 }
 
 @article{Stanford2015,
-  title = {The evolution of standards and data management practices in systems biology},
+  title = {The Evolution of Standards and Data Management Practices in Systems Biology},
   volume = {11},
   timestamp = {2016-08-19T11:48:53Z},
   number = {12},
@@ -153,7 +153,7 @@
 }
 
 @article{Waltemath2011,
-  title = {Reproducible computational biology experiments with {{SED-ML}}-the simulation experiment description markup language},
+  title = {Reproducible Computational Biology Experiments with {{SED}}-{{ML}}-the Simulation Experiment Description Markup Language},
   volume = {5},
   timestamp = {2016-08-19T11:48:53Z},
   number = {1},
@@ -165,7 +165,7 @@
 }
 
 @article{Waltemath2011a,
-  title = {Simulation experiment description markup language ({{SED-ML}}): level 1 version 1},
+  title = {Simulation Experiment Description Markup Language ({{SED}}-{{ML}}): Level 1 Version 1},
   timestamp = {2016-08-19T11:48:53Z},
   journal = {Nature Precedings},
   author = {Waltemath, Dagmar and Bergmann, Frank T and Adams, Richard and {Le Novere}, Nicolas},
@@ -173,7 +173,7 @@
 }
 
 @article{Goble2010,
-  title = {{{myExperiment}}: a repository and social network for the sharing of bioinformatics workflows},
+  title = {{{myExperiment}}: A Repository and Social Network for the Sharing of Bioinformatics Workflows},
   volume = {38},
   issn = {0305-1048, 1362-4962},
   shorttitle = {{{myExperiment}}},
@@ -216,7 +216,7 @@ recording, reporting, and reproduction of methods and data.},
 }
 
 @inproceedings{Cobena2002,
-  title = {Detecting changes in {{XML}} documents},
+  title = {Detecting Changes in {{XML}} Documents},
   doi = {10.1109/ICDE.2002.994696},
   abstract = {We present a diff algorithm for XML data. This work is motivated by the support for change control in the context of the Xyleme project that is investigating dynamic warehouses capable of storing massive volumes of XML data. Because of the context, our algorithm has to be very efficient in terms of speed and memory space even at the cost of some loss of quality. Also, it considers, besides insertions, deletions and updates (standard in diffs), a move operation on subtrees that is essential in the context of XML. Intuitively, our diff algorithm uses signatures to match (large) subtrees that were left unchanged between the old and new versions. Such exact matchings are then possibly propagated to ancestors and descendants to obtain more matchings. It also uses XML specific information such as ID attributes. We provide a performance analysis of the algorithm. We show that it runs in average in linear time vs. quadratic time for previous algorithms. We present experiments on synthetic data that confirm the analysis. Since this problem is NP-hard, the linear time is obtained by trading some quality. We present experiments (again on synthetic data) that show that the output of our algorithm is reasonably close to the optimal in terms of quality. Finally we present experiments on a small sample of XML pages found on the Web},
   timestamp = {2016-08-19T14:51:27Z},
@@ -229,9 +229,9 @@ recording, reporting, and reproduction of methods and data.},
 }
 
 @article{Courtot2011,
-  title = {Controlled vocabularies and semantics in systems biology},
+  title = {Controlled Vocabularies and Semantics in Systems Biology},
   volume = {7},
-  copyright = {Copyright \textcopyright{} 2011 EMBO and Macmillan Publishers Limited. This is an open-access article distributed under the terms of the Creative Commons Attribution License, which permits distribution, and reproduction in any medium, provided the original author and source are credited. This license does not permit commercial exploitation without specific permission.},
+  copyright = {Copyright \textcopyright 2011 EMBO and Macmillan Publishers Limited. This is an open-access article distributed under the terms of the Creative Commons Attribution License, which permits distribution, and reproduction in any medium, provided the original author and source are credited. This license does not permit commercial exploitation without specific permission.},
   issn = {1744-4292, 1744-4292},
   doi = {10.1038/msb.2011.77},
   abstract = {The use of computational modeling to describe and analyze biological systems is at the heart of systems biology. Model structures, simulation descriptions and numerical results can be encoded in structured formats, but there is an increasing need to provide an additional semantic layer. Semantic information adds meaning to components of structured descriptions to help identify and interpret them unambiguously. Ontologies are one of the tools frequently used for this purpose. We describe here three ontologies created specifically to address the needs of the systems biology community. The Systems Biology Ontology (SBO) provides semantic information about the model components. The Kinetic Simulation Algorithm Ontology (KiSAO) supplies information about existing algorithms available for the simulation of systems biology models, their characterization and interrelationships. The Terminology for the Description of Dynamics (TEDDY) categorizes dynamical features of the simulation results and general systems behavior. The provision of semantic information extends a model's longevity and facilitates its reuse. It provides useful insight into the biology of modeled processes, and may be used to make informed decisions on subsequent simulation experiments.},
@@ -251,7 +251,7 @@ recording, reporting, and reproduction of methods and data.},
 }
 
 @article{Waltemath2013,
-  title = {Improving the reuse of computational models through version control},
+  title = {Improving the Reuse of Computational Models through Version Control},
   volume = {29},
   issn = {1367-4803, 1460-2059},
   doi = {10.1093/bioinformatics/btt018},
@@ -274,7 +274,7 @@ Contact: dagmar.waltemath\{at\}uni-rostock.de},
 }
 
 @book{Hunt1976,
-  title = {An algorithm for differential file comparison},
+  title = {An Algorithm for Differential File Comparison},
   timestamp = {2016-08-20T18:28:09Z},
   urldate = {2016-08-20},
   url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.278.6540\&rep=rep1\&type=pdf},
@@ -285,7 +285,7 @@ Contact: dagmar.waltemath\{at\}uni-rostock.de},
 }
 
 @article{Scharm2016,
-  title = {{{COMODI}}: an ontology to characterise differences in versions of computational models in biology},
+  title = {{{COMODI}}: An Ontology to Characterise Differences in Versions of Computational Models in Biology},
   volume = {7},
   issn = {2041-1480},
   shorttitle = {{{COMODI}}},
@@ -303,7 +303,7 @@ Contact: dagmar.waltemath\{at\}uni-rostock.de},
 }
 
 @misc{Siriwaradhana2014,
-  title = {From the entity-relationship to the property-graph model},
+  title = {From the Entity-Relationship to the Property-Graph Model},
   timestamp = {2016-08-20T18:39:50Z},
   urldate = {2016-08-20},
   url = {http://lambdazen.blogspot.com/2014/01/from-entity-relationship-to-property.html},
@@ -374,7 +374,7 @@ Contact: dagmar.waltemath\{at\}uni-rostock.de},
 }
 
 @inproceedings{Wang2003,
-  title = {X-{{Diff}}: an effective change detection algorithm for {{XML}} documents},
+  title = {X-{{Diff}}: An Effective Change Detection Algorithm for {{XML}} Documents},
   shorttitle = {X-{{Diff}}},
   doi = {10.1109/ICDE.2003.1260818},
   abstract = {XML has become the de facto standard format for Web publishing and data transportation. Since online information changes frequently, being able to quickly detect changes in XML documents is important to Internet query systems, search engines, and continuous query systems. Previous work in change detection on XML, or other hierarchically structured documents, used an ordered tree model, in which left-to-right order among siblings is important and it can affect the change result. We argue that an unordered model (only ancestor relationships are significant) is more suitable for most database applications. Using an unordered model, change detection is substantially harder than using the ordered model, but the change result that it generates is more accurate. We propose X-Diff, an effective algorithm that integrates key XML structure characteristics with standard tree-to-tree correction techniques. The algorithm is analyzed and compared with XyDiff [CAM02], a published XML diff algorithm. An experimental evaluation on both algorithms is provided.},
@@ -408,11 +408,11 @@ or they may be a component of a
 compendium
 which provides the infrastructure needed to provide
 access to data and supporting software. These documents, or compendiums, can be processed in a
-number of different ways. One transformation will be to replace the code with its output \textendash{} thereby
+number of different ways. One transformation will be to replace the code with its output \textendash thereby
 providing the familiar, but limited, static document.
-\ensuremath{<}
+$<$
 p /
-\ensuremath{>}
+$>$
 In this paper we apply these concepts
 to a seminal paper in bioinformatics, namely
 The Molecular Classification of Cancer
@@ -431,7 +431,7 @@ of the compendium concept itself.},
 @article{Peng2011,
   title = {Reproducible {{Research}} in {{Computational Science}}},
   volume = {334},
-  copyright = {Copyright \textcopyright{} 2011, American Association for the Advancement of Science},
+  copyright = {Copyright \textcopyright 2011, American Association for the Advancement of Science},
   issn = {0036-8075, 1095-9203},
   doi = {10.1126/science.1213847},
   abstract = {Computational science has led to exciting new developments, but the nature of the work has exposed limitations in our ability to evaluate published findings. Reproducibility has the potential to serve as a minimum standard for judging scientific claims when full independent replication of a study is not possible.},
@@ -447,6 +447,25 @@ of the compendium concept itself.},
   pages = {1226--1227},
   file = {Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/8QBKWBRU/Peng - 2011 - Reproducible Research in Computational Science.pdf:application/pdf;Snapshot:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/V886SVZ6/1226.html:text/html},
   pmid = {22144613}
+}
+
+@article{McCullough2008,
+  title = {Do Economics Journal Archives Promote Replicable Research?: {{Economics}} Journal Archives},
+  volume = {41},
+  issn = {00084085},
+  shorttitle = {Do Economics Journal Archives Promote Replicable Research?},
+  doi = {10.1111/j.1540-5982.2008.00509.x},
+  language = {en},
+  timestamp = {2016-08-30T09:20:48Z},
+  number = {4},
+  urldate = {2016-08-30},
+  url = {http://doi.wiley.com/10.1111/j.1540-5982.2008.00509.x},
+  journal = {Canadian Journal of Economics/Revue canadienne d'{\'e}conomique},
+  author = {McCullough, B.D. and McGeary, Kerry Anne and Harrison, Teresa D.},
+  month = sep,
+  year = {2008},
+  pages = {1406--1420},
+  file = {McCullough et al. - 2008 - Do economics journal archives promote replicable r.pdf:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/TPU867MM/McCullough et al. - 2008 - Do economics journal archives promote replicable r.pdf:application/pdf}
 }
 
 
