added some McCollough quotes

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -22,6 +22,9 @@
 \item Transparency
 	\subitem "Tracking the evolution of a model, that is providing information about changes in the model and its encoding, plays an important role in supporting the user " \cite{Scharm2015}
 	\subitem "Users are often not only interested in the current value of data but also in changes." \cite{Cobena2002}
+	\subitem "The primary purpose of an archive is not to ensure replicability (King 1995, 494) but to enhance extensibility (which presumes replicability). Thus, an archive should make it easier for one researcher to build on the work of another [...]" \cite{McCullough2008}
+	\subitem " For this reason, ‘data only’ archives are not conducive to replication; only data+code archives can facilitate replication. Even when data are proprietary, the code should still be made available, so that other researchers can apply the same method to new data or to check the accuracy of the code. See our recommendation 8 in the appendix." \cite{McCullough2008}
+	
 \item Tracking differences (Provenance)
 	\subitem what has changed
 	\subitem who has changed it
