added basic er diagram to convert to neo4j

--- a/tex/background.tex
+++ b/tex/background.tex
@@ -151,6 +151,13 @@
 	\item cf. \cite{Siriwaradhana2014}
 	\end{itemize}
 	
+	\begin{figure}
+		\center
+		\includegraphics[height=150pt]{resources/er-to-neo4j.pdf}
+		\caption{Example ER diagram}
+		\label{fig:example-er-diagram}
+	\end{figure}
+	
 	\subsection{\masymos}
 	% following some quotes from the Henkel2015 paper
 	\begin{itemize}
