--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -5,6 +5,7 @@
 \end{itemize}
 
 \begin{figure}[h]
+	\center
 	\includegraphics[width=\textwidth]{resources/system-overview-matrix.pdf}
 	\caption{Infrastructure overview}
 	\label{fig:system-overview}
