adde line breaks after institute

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -16,7 +16,9 @@
 \input{shortcuts.tex}
 
 \title{Conception and prototype implementation of a storage solution for multi-versioned simulation models in systems biology}
-\author{Martin Peters\\ \small Department of Systems Biology and Bioinformatics, University of Rostock}
+\author{Martin Peters\\[12pt]
+	\small Department of Systems Biology and Bioinformatics\\
+	\small University of Rostock}
 \date{\today}
 
 \begin{document}
