--- a/tex/background.tex
+++ b/tex/background.tex
@@ -154,7 +154,10 @@
 	\begin{figure}
 		\center
 		\includegraphics[height=150pt]{resources/er-to-neo4j.pdf}
-		\caption{Example ER diagram}
+		\caption{Example conversion of an ER diagram into a neo4j graph}
+	
+		%Create (a1:A {name: 'A1'}), (b1:B {name: 'B1'}), (b2:B {name: 'B2'}), (c1:C {name: 'C1'}), (c2:C {name: 'C2'}), (d1:D {name: 'D1'}), (d2:D {name: 'D2'}), (x1:X {name: 'X1'}), (x2:X {name: 'X2'}), (a1)-[:XA]->(x1), (x1)-[:XB]->(b1), (x1)-[:XC]->(c1), (a1)-[:Y]->(d1), (a1)-[:Y]->(d2), (a1)-[:XA]->(x2), (x2)-[:XB]->(b2), (x2)-[:XC]->(c2)
+		
 		\label{fig:example-er-diagram}
 	\end{figure}
 	
