colorized the er-to-neo4j figure (matched colors of er with neo4j)

--- a/tex/background.tex
+++ b/tex/background.tex
@@ -120,6 +120,7 @@
 	\end{itemize}
 	
 \section{Using graph databases to store \sysbio models}
+	\label{sec:graph-db}
 	\begin{itemize}
 		\item \masymos exists
 		\item graph databases (eg. neo4j) are more suitable for inhomogeneous data
@@ -132,6 +133,10 @@
 	\end{itemize}
 	
 	\subsection{Graph Database schema and the Entity Relation model}
+	\label{sec:graph-db:er}
+	Relational databases have established a supremacy over the time, it is therefore well known, how to convert formal modeling approaches like entity-relationship (ER) models and UML class diagrams into a relational schema. With introducing so called noSQL databases, which break with classic relational design, modeling schema got. Mostly because they do not favor a defined data structure.
+	But since 
+	Even though neo4j, introduced in section \ref{sec:graph-db}, is part of the schema-free noSQL 
 	\begin{itemize}
 	\item entities:
 		\subitem name of the entity becomes vertex name (neo4j node label)
